Buttons vertical alignment fixed

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -22,9 +22,12 @@ p{
 }
 
 .navbar-icons{
+    align-items: center;
+    display: inline-flex;
     float: left;
     width: 30px;
-    margin-right: 7%;
+    margin-right: 10%;
+    height: 100%;
 }
 
 .menu-burger{
@@ -35,6 +38,8 @@ margin-left: 90px;
 }
 
 .container1 a{
+    display: inline-flex;
+    height: 100%;
     color: white;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
@@ -46,28 +51,26 @@ margin-left: 90px;
     margin-right: 1%;
     align-items: center;
     transition: 0.3s;
+    cursor: pointer;
 }
 
-/* This represents the current page the user is on. Its color is different to highlight it. */
-.container1 a.current{
-    background-color: #8A64D6;
+.container1 a.current{ /* This represents the current page the user is on. Its color is different to highlight it. */
+    background-color: #5C3A92;
 }
 
-/* Changes color on hover to contrast background color  */
 .container1 a:hover{
     background-color: #8A64D6;
     color: #99e3ef;
 }
 
-/* Featured tab stlying */
 
+/* Featured tab stlying */
 .featured-tab{
     background-color: rgba(0, 0, 0, 0.501);
     color: white;
     height: 400px;
     margin-bottom: 10px;
     padding: 10px;
-
 }
 
 .featured-tab .featured-img{
@@ -118,6 +121,7 @@ margin-left: 90px;
 .featured-tab a{
     color: #ffffff;
     text-decoration: none;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: 100px;
     border-radius: 30px;
     background-color: #8a64d6cb;
@@ -127,6 +131,7 @@ margin-left: 90px;
     margin-right: 1%;
     align-items: center;
     transition: 0.3s;
+    cursor: pointer;
 }
 
 .featured-tab a:hover{
@@ -134,29 +139,50 @@ margin-left: 90px;
     color: #bceef6;
 }
 
+.featured-tab a:active{
+    background-color: #5C3A92;
+}
+
 /* User Profile Button */
 
 .user-profile-pic{
-    width: 20px;
-    height: 20px;
+    height: 50px;
+    width: 50px;
     border-radius: 50%;
 }
 
-.user-profile{
+.user-button{
+    display: inline-flex;
     color: #ffffff;
-    font-weight: 150px;
+    height: 53px;
+    border: none;
+    outline: none;
+    overflow: hidden;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 500px;
     border-radius: 15px;
+    cursor: pointer;
     background-color: #8a64d600;
-    padding: 8px;
     font-size: 15px;
-    width: 200px;
-    margin-right: 1%;
     transition: 0.3s;
 }
 
-.user-profile:hover{
-    background-color: #729EFD;
-    color: #f4f8f9;
+.user-button:hover{
+    background-color: rgba(245, 245, 245, 0.193);
+    color: #0CEAD9;
+}
+
+.user-button:active{
+    background-color: rgba(245, 245, 245, 0.252);
+    color: #5C3A92;
+}
+
+.button-text,
+.button-icon{
+    display: inline-flex;
+    align-items: center;
+    padding: 0 8px;
+    height: 100%;
 }
 
 /* Left and right Arrows */
@@ -167,6 +193,7 @@ margin-left: 90px;
     left: 1%;
     border-radius: 30px;
     transition: 0.15s;
+    cursor: pointer;
 }
 
 .featured-tab .chevron-left:hover{
@@ -180,6 +207,7 @@ margin-left: 90px;
     right: 1%;
     border-radius: 30px;
     transition: 0.15s;
+    cursor: pointer;
 }
 
 .featured-tab .chevron-right:hover{
